# marpaXml

./: .gitignore  CMakeLists.txt  FindICONV.cmake  FindICU.cmake  Inline.cmake  VA_COPY.cmake
bnf/: qname_1_0.bnf  qname_1_1.bnf  xml_1_0.bnf  xml_1_1.bnf
cmake/: iconv.c  iconv_close.c  iconv_open.c
db/: Dom Level 3 Core.erm  Dom Level 3 Core.sql
include/API/: config.h  config.h.in
include/API/SAX/: ContentHandler.h  DocumentHandler.h  InputSource.h  Locator.h  SAXException.h
include/API/marpaXml/: Array.h  Boolean.h  Charset.h  DOM.h  DOM2.h  Exception.h  IOException.h  InputStream.h  Locale.h  Reader.h  SAX.h  StaticClassPrototype.h  String.h  _types.h  boolean.h  cplus.h  log.h
include/API/marpaXml/DOM/: Attr.h  CDATASection.h  CharacterData.h  Comment.h  DOMConfiguration.h  DOMError.h  DOMErrorHandler.h  DOMException.h  DOMImplementation.h  DOMImplementationList.h  DOMImplementationRegistry.h  DOMImplementationSource.h  DOMLocator.h  DOMString.h  DOMStringList.h  Document.h  DocumentFragment.h  DocumentType.h  Element.h  Entity.h  EntityReference.h  NameList.h  NamedNodeMap.h  Node.h  NodeList.h  Notation.h  ProcessingInstruction.h  Text.h  TypeInfo.h  UserDataHandler.h
include/API/marpaXml/SAX/: AttributeList.h  Attributes.h  ContentHandler.h  DTDHandler.h  DocumentHandler.h  EntityResolver.h  ErrorHandler.h  HandlerBase.h  InputSource.h  Locator.h  Parser.h  SAXException.h  SAXNotRecognizedException.h  SAXNotSupportedException.h  SAXParseException.h  XMLFilter.h  XMLReader.h
include/internal/: DOMStringLiterals.hpp  DOM_Lexeme.h  config.h  config.h.in  config_and_types.h.in  genericStack.h  hash.h  log.h  marpaWrapper.h  messageBuilder.h  streamIn.h
include/internal/grammar/: qname_1_0.h  qname_1_1.h  xml_1_0.h  xml_1_1.h  xml_common.h
src/API/marpaXml/: DOM.c  DOM2.c  String.c  cplus.c  log.c
src/internal/: DOMStringLiterals.cpp  bufManager.c  dateBuilder.c  encoding.c  genericStack.c  hash.c  log.c  manageBuf.c  marpaWrapper.c  messageBuilder.c  streamIn.c
src/internal/grammar/: xml_1_0.c  xml_1_1.c  xml_common.c
src/internal/grammar/qname_1_0/: _qname_1_0__discardb.c
src/internal/grammar/qname_1_1/: _qname_1_1__discardb.c
src/internal/grammar/xml_1_0/: _xml_1_0__Exclusion001b.c  _xml_1_0__Exclusion002b.c  _xml_1_0__Exclusion003b.c  _xml_1_0__Exclusion004b.c  _xml_1_0__Exclusion005b.c  _xml_1_0__Exclusion006b.c  _xml_1_0__discardb.c  exclusion.c
src/internal/grammar/xml_1_1/: _xml_1_1__discardb.c
test/API/: DOM.c  DOM_test.c  String_test.c  log_test.c
test/internal/: DOM_Lexeme_test.c  ICU4CDetectEncoding.c  log.c  marpaWrapperTest.c  marpaWrapper_test.c  streamInTest.c  streamIn_test.c
test/internal/grammar/: xml_1_0.c  xml_1_0_test.c  xml_1_1.c  xml_1_1_test.c
tools/: extract.pl  generateMarpaWrapperCode.pl  prepare_dom3.pl  prepare_libavl.pl  prepare_libmarpa.pl  prepare_sqlite_amalgamation.pl
xxhash-read-only/: xxhash.c
